--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
     },
     "rules": {
         "no-console": "off",
-        "no-underscore-dangle": "off"
-    }
+        "no-underscore-dangle": "off",
+        "max-len": ['warn', { code: 120 }]
+    },
+
 }
