--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run start:dev",
     "start:prod": "NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
     "lint": "eslint ./src",
+    "test": "lab --verbose",
     "migrate": "node-pg-migrate up",
     "migrate:undo": "node-pg-migrate down",
     "migrate:undo:all": "node-pg-migrate down --all"
@@ -15,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@hapi/code": "^9.0.3",
+    "@hapi/lab": "^26.0.0",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
