--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
-    "@hapi/jwt": "^3.2.1",
-    "bcrypt": "^6.0.0",
-    "dotenv": "^17.2.1",
-    "joi": "^17.13.3",
-    "nanoid": "^3.1.20",
-    "node-pg-migrate": "^8.0.3",
-    "pg": "^8.16.3"
+    "@hapi/inert": "^7.1.0",
+    "@hapi/jwt": "^3.2.0",
+    "amqplib": "^0.10.3",
+    "aws-sdk": "^2.1490.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "joi": "^17.10.2",
+    "nanoid": "^3.3.6",
+    "pg": "^8.11.3",
+    "redis": "^4.6.8"
   }
 }
